# Pixmap-multi-thread

./: CMakeLists.txt  README.md  gtkWindow.h  main.c  makefile  ppm_image.c  ppm_image.h  readPPM.h
